@@ -2,6 +2,9 @@
     Core & Setup:
     * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
 
+    Checks & Agents:
+    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
+
     Multisite:
     * 3938 FIX: tactical overview: fixed wrong display of number of host/service problems...
 
